starlark-rust/starlark/src/typing/tests/golden/types_of_args_kwargs.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
def foo(*args: str, **kwargs: int):
    pass

def test():
    # Good
    foo("a")
    foo(b=1)
    # Bad
    foo(1)
    foo(c="x")

Error:
error: Expected type `str` but got `int`
  --> filename:10:9
   |
10 |     foo(1)
   |         ^
   |

Error:
error: Expected type `int` but got `str`
  --> filename:11:9
   |
11 |     foo(c="x")
   |         ^^^^^
   |

Types:
args: tuple[str, ...]
kwargs: dict[str, int]

Compiler typechecker (eval):
error: Expected type `str` but got `int`
  --> filename:10:9
   |
10 |     foo(1)
   |         ^
   |
